<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!--Gambar-->
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/image_receive"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:src="@drawable/kerjasama"
                android:adjustViewBounds="true"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:layout_gravity="bottom"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="16dp"
                android:background="#4D000000"
                android:drawablePadding="4dp"
                android:gravity="center_vertical"
                android:padding="8dp"
                android:text="@string/dummy_photos"
                android:drawableStart="@drawable/ic_collections_white_18dp" />
        </FrameLayout>

        <!--Title-->
        <TextView
            style="@style/TextContent.HeadlineMedium.Bold"
            android:id="@+id/title_receive"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/title"
            android:textSize="20sp" />

        <TextView
            style="@style/TextContent.TitleMedium.Bold.MarginLeftRight"
            android:layout_marginBottom="16dp"
            android:text="Politeknik Negeri Banyuwangi"
            android:textSize="12sp"/>

        <TextView
            style="@style/TextContent.BodyMedium.Gray.MarginLeftRight"
            android:id="@+id/description_receive"
            android:layout_marginBottom="16dp"
            android:lineSpacingMultiplier="1"
            android:text="@string/description" />

        <!--Footer-->
        <TextView
            style="@style/TextContent.TitleMedium.Bold.MarginLeftRight"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/author" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp">

            <ImageView
                android:id="@+id/profile_image"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:layout_centerVertical="true"
                android:layout_marginEnd="16dp"
                android:src="@drawable/foto_rio" />

            <TextView
                style="@style/TextContent.BodyMedium.Gray"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/profile_image"
                android:text="@string/my_name" />
        </RelativeLayout>

        <Button
            android:id="@+id/btn_back"
            style="@style/ButtonGeneral.SecondaryVariant"
            android:text="@string/back" />

    </LinearLayout>
</ScrollView>